--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "jsonwebtoken": "^7.3.0",
-    "mongoose": "^4.9.2"
+    "mongoose": "^4.9.2",
+    "mongoose-double": "0.0.1"
   }
 }
