--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
+    "email-verification": "^0.4.6",
     "express": "^4.15.2",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.2",
-    "mongoose-double": "0.0.1"
+    "mongoose-double": "0.0.1",
+    "nodemailer": "^3.1.8",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
