--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/SEGUC17/hackslash#readme",
   "dependencies": {
-    "body-parser": "^1.17.1"
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "jsonwebtoken": "^7.3.0",
+    "mongoose": "^4.9.3",
+    "mongoose-double": "0.0.1"
   }
 }
