--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
-  "name": "miniproject2",
+  "name": "hackslash",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SEGUC17/hackslash.git"
+  },
+  "author": "hackslash",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SEGUC17/hackslash/issues"
+  },
+  "homepage": "https://github.com/SEGUC17/hackslash#readme",
   "dependencies": {
-    "body-parser": "^1.16.1",
-    "express": "^4.14.1",
-    "express-paginate": "^0.2.2",
-    "express-session": "^1.15.1",
-    "lodash": "^4.17.4",
-    "method-override": "^2.3.7",
-    "mongoose": "^4.8.3",
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.1",
+    "email-verification": "^0.4.6",
+    "express": "^4.15.2",
+    "jsonwebtoken": "^7.3.0",
+    "email-verification": "^0.4.6",
+    "mongoose": "^4.9.2",
     "mongoose-double": "0.0.1",
-    "multer": "^1.3.0",
-    "resourcejs": "^1.6.1"
+    "sendgrid": "^5.0.0",
+    "nodemailer": "^3.1.8",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
