--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.9.2",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-double": "0.0.1",
+    "multer": "^1.3.0",
     "nodemailer": "^3.1.8",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "sendgrid": "^5.0.0"
