--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "multer": "^1.3.0",
     "nodemailer": "^3.1.8",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "path": "^0.12.7",
     "sendgrid": "^5.0.0"
   }
 }
-
