--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SEGUC17/hackslash#readme",
   "dependencies": {
+    "angular-cookies": "^1.6.4",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "email-verification": "^0.4.6",
@@ -29,7 +30,7 @@
     "multer": "^1.3.0",
     "nodemailer": "^3.1.8",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "path": "^0.12.7",
     "sendgrid": "^5.0.0"
   }
 }
-
