--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.17.1",
     "email-verification": "^0.4.6",
     "express": "^4.15.2",
+    "express-flash": "0.0.2",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.2",
     "mongoose-auto-increment": "^5.0.1",
@@ -31,6 +32,7 @@
     "nodemailer": "^3.1.8",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "path": "^0.12.7",
+    "pug": "^2.0.0-beta.12",
     "sendgrid": "^5.0.0"
   },
   "devDependencies": {
