--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "path": "^0.12.7",
     "pug": "^2.0.0-beta.12",
-    "sendgrid": "^5.0.0"
+    "sendgrid": "^5.0.0",
+    "strip": "^3.0.0",
+    "stripe": "^4.18.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
