--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "stripe": "^4.18.0"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "supertest": "^3.0.0"
   }
 }
